# meme-bot

./: .gitignore  .pylintrc  9em32dDnTck.opus  Pipfile  README.md  __init__.py  alembic.ini  bot.py  config.example.py  config.example.toml  config.py  config.py.example  config.toml  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  testytdl.py  todos.txt  waffle.db
alembic/: env.py
alembic/versions/: 0312d62011f1_added_guild_id_column.py  681a82e895ed_switched_kwargs_column_to_pickletype.py  7b07d271c269_modified_tasks_table.py  928c6c9f3646_added_tasks_table.py  d352e849298a_added_user_id_column.py
cogs/: debug.py  errors.py  moderation.py  music.py
waffle/: __init__.py  __init__.py.7775ef9802e222feec1423d8c652ee4c.py  config.py  config.py.c0f8057ea6189d9c0af1f0f99d36344e.py  database.py  database.py.6d0d2055f3fd2baea5cb42005ef6663b.py  debug.py  debug.py.1945d47be2bbfe84c61c6afcab0b6743.py  moderation.py  moe.py  music.py  scheduler.py  scheduler.py.9e9c326e7c33aff6ad3a79485e2cadda.py  tables.py
