[tool.poetry]
name = "waffle-bot"
version = "0.1.0"
description = ""
authors = ["faith <jamienibtong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
youtube-dl = "*"
humanize = "*"
toml = "*"
SQLAlchemy = "*"
alembic = "*"
aiosqlite = "*"
"discord.py" = {extras = ["voice"], version = "^1.7.1"}

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
