[tool.poetry]
name = "waffle-bot"
version = "0.1.0"
description = ""
authors = ["faith <jamienibtong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
youtube-dl = {version = "*", optional = true}
humanize = "*"
toml = "*"
SQLAlchemy = "*"
aiosqlite = "*"
"discord.py" = {extras = ["voice"], version = "^1.7.1"}
gql = {extras = ["aiohttp"], version = "^2.0.0", optional = true}

[tool.poetry.dev-dependencies]
alembic = "*"
bandit = "*"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
